# sauria

./: .gitignore  .prettierignore  .prettierrc  .release-version  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  tsconfig.base.json  tsconfig.json  turbo.json
.claude/: settings.json
.github/: CODEOWNERS  SECURITY.md
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.dev.json  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: cmd_brain.rs  cmd_brain_types.rs  cmd_canvas.rs  cmd_canvas_helpers.rs  cmd_canvas_migrate.rs  cmd_channels.rs  cmd_channels_connect.rs  cmd_channels_disconnect.rs  cmd_channels_email.rs  cmd_channels_generic.rs  cmd_channels_telegram.rs  cmd_channels_validators.rs  cmd_code.rs  cmd_commands.rs  cmd_integrations.rs  cmd_oauth.rs  cmd_oauth_integrations.rs  cmd_personal_mcp.rs  cmd_setup.rs  cmd_setup_helpers.rs  cmd_setup_models.rs  cmd_setup_validate.rs  cmd_voice.rs  daemon_client.rs  daemon_ipc.rs  daemon_manager.rs  daemon_process.rs  main.rs  paths.rs  vault.rs  voice_sidecar.rs  windows.rs  windows_nav.rs
apps/voice-backend/: pyproject.toml
apps/voice-backend/src/sauria_voice/: __init__.py  api.py  assistant.py  cli.py  llm.py  stt.py  tool_registry.py  tools_sauria.py  tts.py
desktop/: forge.config.ts  package-lock.json  package.json  tsconfig.json  vite.main.config.ts  vite.renderer.config.ts
docs/: self-hosting-oauth.md
scripts/: install.sh  (+3 more)
(+652 files in other folders)
