[project]
name = "sauria-voice"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.34.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.28.0",
  "mlx-whisper>=0.4.0",
  "TTS>=0.22.0",
  "soundfile>=0.12.0",
]

[project.scripts]
sauria-voice = "sauria_voice.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
