[package]
name = "sauria-desktop"
version = "2026.310.0"
edition = "2021"
authors = ["Teo Bouancheau <116342837+teobouancheau@users.noreply.github.com>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/opensauria/sauria"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-deep-link = "2"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "io-util", "time", "process", "fs", "sync", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
pbkdf2 = { version = "0.12", features = ["sha2"] }
aes-gcm = "0.10"
rand = "0.8"
dirs = "5"
base64 = "0.22"
log = "0.4"
hex = "0.4"
whoami = "1"
open = "5"
url = "2"
urlencoding = "2"
regex = "1"
libc = "0.2"
portable-pty = "0.8"

[dev-dependencies]
tempfile = "3"

[features]
custom-protocol = ["tauri/custom-protocol"]
